v3: Fixed css margins on mobile devices

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -289,6 +289,10 @@ ul {
   width: 100%;
 }
 
+.mrem-2 {
+  margin-top: 2rem;
+}
+
 /* ANIMATION */
 
 .fade-hero {
